--- a/Dissertation/refs/bibliography.bib
+++ b/Dissertation/refs/bibliography.bib
@@ -35,6 +35,22 @@ title = {{Multidimensional detective}},
 url = {http://ieeexplore.ieee.org/lpdocs/epic03/wrapper.htm?arnumber=636793},
 year = {1997}
 }
+@article{Sokolova2009,
+author = {Sokolova, Marina and Lapalme, Guy},
+doi = {10.1016/j.ipm.2009.03.002},
+file = {:home/alexgmcm/Documents/Mendeley Desktop/Sokolova, Lapalme - 2009 - A systematic analysis of performance measures for classification tasks.pdf:pdf},
+issn = {03064573},
+journal = {Information Processing \& Management},
+keywords = {performance evaluation},
+month = jul,
+number = {4},
+pages = {427--437},
+publisher = {Elsevier Ltd},
+title = {{A systematic analysis of performance measures for classification tasks}},
+url = {http://linkinghub.elsevier.com/retrieve/pii/S0306457309000259},
+volume = {45},
+year = {2009}
+}
 @article{Bushati2011,
 abstract = {The complexity of gene expression data generated from microarrays and high-throughput sequencing make their analysis challenging. One goal of these analyses is to define sets of co-regulated genes and identify patterns of gene expression. To date, however, there is a lack of easily implemented methods that allow an investigator to visualize and interact with the data in an intuitive and flexible manner. Here, we show that combining a nonlinear dimensionality reduction method, t-statistic Stochastic Neighbor Embedding (t-SNE), with a novel visualization technique provides a graphical mapping that allows the intuitive investigation of transcriptome data. This approach performs better than commonly used methods, offering insight into underlying patterns of gene expression at both global and local scales and identifying clusters of similarly expressed genes. A freely available MATLAB-implemented graphical user interface to perform t-SNE and nearest neighbour plots on genomic data sets is available at www.nimr.mrc.ac.uk/research/james-briscoe/visgenex.},
 author = {Bushati, Natascha and Smith, James and Briscoe, James and Watkins, Christopher},
