--- a/Dissertation/sections/analysiseval.tex
+++ b/Dissertation/sections/analysiseval.tex
@@ -10,6 +10,8 @@ It is interesting to see that the classifier trained solely on the residuals fro
 
 A `dumb' classifier that simply predicted all the patients to be healthy would outperform it (based purely on classification accuracy). The fact that the classifier didn't just learn to classify all patients as healthy shows that RUSBoost is successful at dealing with skewed classes but nonetheless the classifier is still not successful enough to be useful, especially in medical diagnosis which requires a classifier to be both highly sensitive and highly specific (i.e. a low false positive and false negative rate) because of the economic costs of unnecessary tests and treatments alongside the psychological strain of a false diagnosis whilst a false negative result can have potentially fatal consequences.
 
+The $F_{1M}$ score that takes false positives and false negatives into account and is thus often a better figure of merit than classification accuracy (especially for medical diagnosis where the mistakes are important as previously discussed) favoured our classifiers over the dummy classifier and random guessing as mentioned previously they are far from the quality required for medical diagnosis.
+
 There were some difficulties with the study, for example because MCI and Alzheimer's are typically diagnosed in old age this means that some of the inaccuracy of the model may simply be due to the fact that it was also trained on younger healthy ages, whereas the AD and MCI patients were all relatively old. This is compounded by the fact that most of the control subjects were younger perhaps because students are common participants in such experiments and they tend to be young.
 
 Furthermore given the nature of resting-state MEG experiments it is somewhat common for the subjects to fall asleep as it is dark, the subject is asked to remain immobile and the experiment may last quite some time. This is not a problem in itself if it is correctly reported, but even with a camera it can be very difficult to notice if the subject has fallen asleep and while healthy subjects are usually aware that they have fallen asleep upon waking, diseased patients who are cognitively impaired may fail to report it thus leading to contaminated data. This often shows up in the power spectra as an increased power in the lower frequency bands, but manually inspecting every power spectrum is not feasible given the vast number of subjects, channels and epochs. Given that the instances in which the subject falls asleep are rare compared to the awake state it is possible that in the future one could attempt to use anomaly detection methods\cite{Chandola2009} to detect the contaminated epochs.
