--- a/Dissertation/sections/misc/abstract.tex
+++ b/Dissertation/sections/misc/abstract.tex
@@ -1,5 +1,5 @@
 \abstract{
 
-A model of healthy ageing based on the relative powers of different spectral bands in resting-state magnetoencephalograpy (MEG) recordings was constructed by performing multiple regression of age on the relative powers. As expected the model fit the healthy subjects best (as determined by tenfold cross-validation) and the diseased patients worse (as measured by bootstrap estimates of the root mean squared error (RMSE)). The RMSE values were $14.86 \pm 2.68$ years for the healthy subjects, $22.72 \pm 3.03$ years for the Mild Cognitive Impairment (MCI) patients and $26.93 \pm 2.65$ for the Alzheimer's Disease (AD) patients. The expected negative correlation between the residuals of the model and the cognitive test scores of the patients was observed but it was very weak $r^2$ values of 0.0146 and 0.0168 for the AD and MCI respectively. Various visualisation methods all showed that the classes were not separable. This was corroborated by the poor performance of the RUSBoost classifier which only achieved 76.26\% classification accuracy when trained on the residuals from the model (the performance using the relative powers was worse at 47.48\%). Although better than random guessing this was worse than simply guessing the majority class due to the skewed classes and certainly lacks the high specificity and sensitivity required for medical diagnosis.
+A model of healthy ageing based on the relative powers of different spectral bands in resting-state magnetoencephalograpy (MEG) recordings was constructed by performing multiple regression of age on the relative powers. As expected the model fit the healthy subjects best (as determined by tenfold cross-validation) and the diseased patients worse (as measured by bootstrap estimates of the root mean squared error (RMSE)). The RMSE values were $14.86 \pm 2.68$ years for the healthy subjects, $22.72 \pm 3.03$ years for the Mild Cognitive Impairment (MCI) patients and $26.93 \pm 2.65$ for the Alzheimer's Disease (AD) patients. The expected negative correlation between the residuals of the model and the cognitive test scores of the patients was observed but it was very weak with $r^2$ values of 0.0146 and 0.0168 for the AD and MCI respectively. Various visualisation methods all showed that the classes were not separable. This was corroborated by the poor performance of the RUSBoost classifier which only achieved an $F_{1M}$ score of 0.542 when trained on the residuals from the model (the $F_{1M}$ score using the relative powers was worse at 0.458). The $F_{1M}$ score has a maximum value of 1 for a perfect classifier while 0 is the lowest possible score. Although better than random guessing and simply guessing the majority class our classifiers lack the high specificity and sensitivity required for medical diagnosis. Future work is suggested which may lead to more successful classifiers.
 
 }
