--- a/Dissertation/sections/conclusion.tex
+++ b/Dissertation/sections/conclusion.tex
@@ -4,6 +4,6 @@ In conclusion, the work achieved its aims of building a model of healthy ageing 
 
 The expected correlation between the residuals of the model and the cognitive test scores of the diseased patients was observed, but it was very weak (as measured by $r^2$ values).
 
-Visualisations of the data showed that the classes did not seem separable and this was supported by the poor performance of the classifier which although it was better than random guessing and just guessing the majority class (as measured by the $F_{1M}$ score) it was still poor and lacked the high sensitivity and specificity required for medical diagnosis. Although some of this could be the result of label noise (inaccurate labels) to which boosted algorithms are particularly sensitive, the large RMSE values of the ageing model show that it is likely that the data is noisy and may contain relatively little information pertaining to the classification task.
+Visualisations of the data showed that the classes did not seem separable and this was supported by the poor performance of the classifier which although it was better than just guessing the majority class (as measured by the $F_{1M}$ score) it was still poor and lacked the high sensitivity and specificity required for medical diagnosis. Although some of this could be the result of label noise (inaccurate labels) to which boosted algorithms are particularly sensitive, the large RMSE values of the ageing model show that it is likely that the data is noisy and may contain relatively little information pertaining to the classification task.
 
 Future work could involve the use of complexity measures (such as the Lempel-Ziv Complexity) as features as this has shown promise in previous studies.\cite{Hornero2008}\cite{Fernandez2012}. The data cleaning process may also be improved by the use of anomaly detection methods\cite{Chandola2009} to detect epochs in which the patient was asleep, which can often be missed by the experimenter.  
